--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,24 +1,14 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
-
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
-
 docusaurus:
   label: Docusaurus
   permalink: /docusaurus
   description: Docusaurus tag description
 
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
-
 quizapp:
   label: Quiz App
   permalink: /quizapp
   description: Quizzes for christians
+
+documentation:
+  label: Documentation
+  permalink: /documentation
+  description: Documentation tag description
